--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -21,7 +21,7 @@
             }
 
             .navButtons:hover{
-                background-image: linear-gradient(to bottom, #0783E8, #055EA6);
+                background-image: linear-gradient(to bottom, lightblue, blue);
             }
 
             .cont-Bv{
@@ -57,7 +57,7 @@
                                 <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
                             </li>
                             <li class="nav-item dropdown me-3 rounded-3 navButtons">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Categorias
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
@@ -70,7 +70,7 @@
                                 <a class="nav-link" aria-current="page" href="Contato_mangapedia.html">Contato</a>
                             </li>
                             <li class="nav-item dropdown rounded-3 me-3 navButtons">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Plataformas
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
