--- a/romance.html
+++ b/romance.html
@@ -128,11 +128,11 @@
 
         <!-- Inicio container mangás-->
 
-<div class="container cont-Mg rounded-3 mb-3">
-    <div class="accordion accordion-flush p-2" id="accordionFlushExample">
+<div class="container cont-Mg rounded-3 mb-3 p-2">
+    <div class="accordion accordion-flush " id="accordionFlushExample">
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#primeiro" aria-expanded="false" aria-controls="flush-collapseOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#primeiro" aria-expanded="false" aria-controls="flush-collapseOne" id="ahr">
             Ao Haru ride
           </button>
         </h2>
@@ -152,7 +152,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#segundo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#segundo" aria-expanded="false" aria-controls="flush-collapseTwo" id="gotobun">
             Go-Tōbun no Hanayome
           </button>
         </h2>
@@ -172,7 +172,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#terceiro" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#terceiro" aria-expanded="false" aria-controls="flush-collapseThree" id="horimiya">
             Horimiya
           </button>
         </h2>
@@ -192,7 +192,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quarto" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quarto" aria-expanded="false" aria-controls="flush-collapseThree" id="ks">
             Kaguya-Sama
           </button>
         </h2>
@@ -212,7 +212,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quinto" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quinto" aria-expanded="false" aria-controls="flush-collapseThree" id="ko">
             Kanojo, Okarishimasu
           </button>
         </h2>
@@ -232,7 +232,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sexto" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sexto" aria-expanded="false" aria-controls="flush-collapseThree" id="kcc">
             Komi-San
           </button>
         </h2>
@@ -253,7 +253,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#setimo" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#setimo" aria-expanded="false" aria-controls="flush-collapseThree" id="na">
             Nagatoro
           </button>
         </h2>
@@ -274,7 +274,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#oitavo" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#oitavo" aria-expanded="false" aria-controls="flush-collapseThree" id="no">
             Noragami
           </button>
         </h2>
@@ -295,7 +295,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nono" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nono" aria-expanded="false" aria-controls="flush-collapseThree" id="uc">
             Uzaki-Chan
           </button>
         </h2>
@@ -316,7 +316,7 @@
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#decimo" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#decimo" aria-expanded="false" aria-controls="flush-collapseThree" id="w">
             Wotakoi
           </button>
         </h2>
